--- a/shell/apple/emulator-osx/reicast-osx.xcodeproj/xcshareddata/xcschemes/reicast-osx.xcscheme
+++ b/shell/apple/emulator-osx/reicast-osx.xcodeproj/xcshareddata/xcschemes/reicast-osx.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "84A388B21B1CDD3E000166C0"
-               BuildableName = "Reicast.app"
+               BuildableName = "Flycast.app"
                BlueprintName = "reicast-osx"
                ReferencedContainer = "container:reicast-osx.xcodeproj">
             </BuildableReference>
@@ -58,7 +58,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "84A388B21B1CDD3E000166C0"
-            BuildableName = "Reicast.app"
+            BuildableName = "Flycast.app"
             BlueprintName = "reicast-osx"
             ReferencedContainer = "container:reicast-osx.xcodeproj">
          </BuildableReference>
@@ -82,7 +82,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "84A388B21B1CDD3E000166C0"
-            BuildableName = "Reicast.app"
+            BuildableName = "Flycast.app"
             BlueprintName = "reicast-osx"
             ReferencedContainer = "container:reicast-osx.xcodeproj">
          </BuildableReference>
@@ -101,7 +101,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "84A388B21B1CDD3E000166C0"
-            BuildableName = "Reicast.app"
+            BuildableName = "Flycast.app"
             BlueprintName = "reicast-osx"
             ReferencedContainer = "container:reicast-osx.xcodeproj">
          </BuildableReference>
