renderer: support non-integer v-scaling factor
Fixes missing half-screen in Wacky Races (PAL), Buzz Lightyear of Star Command (PAL),
Tom Clancy's Rainbow Six - Rogue Spear + Mission Pack - Urban Operations (PAL), Sega Worldwide Soccer 2000 (PAL)

Input record and replay support for test automation

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -392,6 +392,10 @@ ifdef HAS_SOFTREND
     CXXFLAGS += -DTARGET_SOFTREND
 endif
 
+ifdef TEST_AUTOMATION
+    CFLAGS += -DTEST_AUTOMATION
+endif
+
 EXECUTABLE_STRIPPED=nosym-reicast.$(PLATFORM_EXT)
 ifdef NAOMI
     CFLAGS += -D TARGET_NAOMI
