--- a/bitrise.yml
+++ b/bitrise.yml
@@ -16,6 +16,10 @@ workflows:
     steps:
     - activate-ssh-key@4.0.3:	
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+    - brew-install
+        title: Install SDL2
+        inputs:
+        - packages: "sdl2"
     - git-clone@4.0.14: {}
     - cache-pull@2.0.1: {}
     - script@1.1.5:
