msvc: Fix Visual Studio solution

--- a/shell/reicast.vcxproj.filters
+++ b/shell/reicast.vcxproj.filters
@@ -294,66 +294,6 @@
     <ClCompile Include="..\core\rend\d3d11\d3d11.cpp">
       <Filter>rend\d3d11</Filter>
     </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\base64-decode.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\client.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\client-handshake.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\client-parser.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\context.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\extension.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\extension-deflate-frame.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\extension-deflate-stream.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\libwebsockets.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\lws-plat-unix.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\lws-plat-win.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\output.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\parsers.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\pollfd.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\server.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\server-handshake.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\service.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\sha-1.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\deps\libwebsocket\handshake.c">
-      <Filter>deps\libwebsocket</Filter>
-    </ClCompile>
-    <ClCompile Include="..\core\webui\server.cpp">
-      <Filter>webui</Filter>
-    </ClCompile>
     <ClCompile Include="..\core\deps\coreio\coreio.cpp">
       <Filter>deps\coreio</Filter>
     </ClCompile>
@@ -634,6 +574,22 @@
     <ClCompile Include="..\core\imgread\cue.cpp">
       <Filter>imgread</Filter>
     </ClCompile>
+    <ClCompile Include="..\core\log\ConsoleListenerWin.cpp">
+      <Filter>log</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\log\LogManager.cpp">
+      <Filter>log</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\mem\vmem32.cpp">
+      <Filter>hw\mem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\sh4\modules\fastmmu.cpp">
+      <Filter>hw\sh4\modules</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\hw\sh4\dyna\ssa.cpp">
+      <Filter>hw\sh4\dyna</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\cheats.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="hw">
@@ -726,12 +682,6 @@
     <Filter Include="rend\d3d11">
       <UniqueIdentifier>{cc05f61b-c484-40e6-9859-6ca0cd64735c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="deps\libwebsocket">
-      <UniqueIdentifier>{3d3de3ff-9e79-4920-a95a-61d190e73004}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="webui">
-      <UniqueIdentifier>{81193efc-656a-4154-9adf-146856d4c7d3}</UniqueIdentifier>
-    </Filter>
     <Filter Include="deps\coreio">
       <UniqueIdentifier>{23cfa286-fe88-439d-89de-a6a5a23cacc9}</UniqueIdentifier>
     </Filter>
@@ -800,6 +750,9 @@
     </Filter>
     <Filter Include="input">
       <UniqueIdentifier>{8fea504f-a313-4ab2-b25b-74e80fe449c8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="log">
+      <UniqueIdentifier>{1f84f72f-467a-4204-89f3-25dd91d4afa5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -1088,24 +1041,6 @@
     <ClInclude Include="..\core\rend\TexCache.h">
       <Filter>rend</Filter>
     </ClInclude>
-    <ClInclude Include="..\core\deps\libwebsocket\extension-deflate-frame.h">
-      <Filter>deps\libwebsocket</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\deps\libwebsocket\extension-deflate-stream.h">
-      <Filter>deps\libwebsocket</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\deps\libwebsocket\libwebsockets.h">
-      <Filter>deps\libwebsocket</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\deps\libwebsocket\lws_config.h">
-      <Filter>deps\libwebsocket</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\deps\libwebsocket\private-libwebsockets.h">
-      <Filter>deps\libwebsocket</Filter>
-    </ClInclude>
-    <ClInclude Include="..\core\webui\server.h">
-      <Filter>webui</Filter>
-    </ClInclude>
     <ClInclude Include="..\core\deps\coreio\coreio.h">
       <Filter>deps\coreio</Filter>
     </ClInclude>
@@ -1376,6 +1311,49 @@
     <ClInclude Include="..\core\windows\xinput_gamepad.h">
       <Filter>windows</Filter>
     </ClInclude>
+    <ClInclude Include="..\core\deps\libpng\pngdebug.h">
+      <Filter>deps\libpng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\deps\libpng\pnginfo.h">
+      <Filter>deps\libpng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\deps\libpng\pnglibconf.h">
+      <Filter>deps\libpng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\deps\libpng\pngstruct.h">
+      <Filter>deps\libpng</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\deps\xxhash\xxhash.h">
+      <Filter>deps\xxhash</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\log\BitSet.h">
+      <Filter>log</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\log\ConsoleListener.h">
+      <Filter>log</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\log\Log.h">
+      <Filter>log</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\log\LogManager.h">
+      <Filter>log</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\log\StringUtil.h">
+      <Filter>log</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\rec-x64\x64_regalloc.h">
+      <Filter>rec-x64</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\mem\vmem32.h">
+      <Filter>hw\mem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\sh4\dyna\ssa.h">
+      <Filter>hw\sh4\dyna</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\hw\sh4\dyna\ssa_regalloc.h">
+      <Filter>hw\sh4\dyna</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\cheats.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\core\deps\zlib\Makefile">
@@ -1389,6 +1367,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="..\core\rec-x64\msvc.asm" />
+    <MASM Include="..\core\rec-x64\msvc.asm">
+      <Filter>rec-x64</Filter>
+    </MASM>
   </ItemGroup>
 </Project>
