vulkan: prefer optimal depth format. use same format for rtt
Try to find an optimal depth format then fall back to linear
Use same depth format for rtt depth attachments
Allow RenderToTextureBuffer setting to be changed at runtime
Enable vulkan on windows

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -273,6 +273,7 @@ endif
     undefine FOR_LINUX
     NO_NIXPROF := 1
     FOR_WINDOWS := 1
+	USE_VULKAN ?= 1
 else
     $(error Unknown platform)
 endif
