first attempt at a unit test

--- a/wercker.yml
+++ b/wercker.yml
@@ -9,6 +9,9 @@ build:
             name: gcc-version
             code: gcc --version
         - script:
+            name: flycast tests
+            code: make -C shell/linux UNIT_TESTS=1 tests
+        - script:
             name: flycast x64 build
             code: make -C shell/linux platform=x64
         - script:
