--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -43,6 +43,9 @@ android {
     }
 
     signingConfigs {
+        debug {
+            storeFile file("../debug.keystore")
+        }
         release {
             storeFile file("../reicast-beta-cd.jks")
             storePassword "notasecret"
